codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__capacity_retry__capacity_retry_canceled.snap
---
source: tui/src/chatwidget/capacity_retry_tests.rs
expression: rendered
---
• Automatic capacity retry canceled.
