codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__capacity_retry__capacity_retry_exhausted.snap
---
source: tui/src/chatwidget/capacity_retry_tests.rs
assertion_line: 332
expression: rendered
---
■ Selected model is at capacity. Please try a different model.

• Automatic capacity retries stopped after 10 attempts.
