codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__capacity_retry__capacity_retry_native.snap
---
source: tui/src/chatwidget/capacity_retry_tests.rs
assertion_line: 83
expression: rendered
---
■ Selected model is at capacity. Please try a different model.

• Auto-retry 1/10: retrying in [delay]s. Typing or Esc cancels.

■ Selected model is at capacity. Please try a different model.
