codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__capacity_retry__capacity_retry_visible_continue.snap
---
source: tui/src/chatwidget/capacity_retry_tests.rs
expression: rendered
---
⚠ Selected model is at capacity. Please try a different model.

• Auto-retry 1/10: sending "continue" in [delay]s. Typing or Esc cancels.

⚠ Selected model is at capacity. Please try a different model.


› continue
